refactor: changed env variable and template folder location

--- a/src/config/settings/user_cfg.yaml
+++ b/src/config/settings/user_cfg.yaml
@@ -1,7 +1,7 @@
 # painel de controle
 painel_controle:
   #   versão do código em execução (DEV / PRD)
-  versao: DEV
+  ambiente: DEV
   bl_debug_mode: False
 
 # gravação de logs
