docs: venv_conf suggestion updated

--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,16 @@ __pycache__/
 Thumbs.db
 
 # ENV
-.env
+*.env
 
 # VENV
 .venv
+
+# logs
+logs/
+
+# python build artifacts
+dist/
+build/
+*.egg-info/
+.pypirc
